--- a/SVM/Semaine4-exercices.ipynb
+++ b/SVM/Semaine4-exercices.ipynb
@@ -836,28 +836,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.32465246735834974"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def gaussian_kernel(x1, x2, sigma):  \n",
-    "    return np.exp(-(np.sum((x1 - x2) ** 2) / (2 * (sigma ** 2))))\n",
-    "\n",
-    "x1 = np.array([1.0, 2.0, 1.0])  \n",
-    "x2 = np.array([0.0, 4.0, -1.0])  \n",
-    "sigma = 2  \n",
-    "gaussian_kernel(x1, x2, sigma)  "
+    "    return np.exp(-(np.sum((x1 - x2) ** 2) / (2 * (sigma ** 2))))"
    ]
   },
   {
@@ -869,12 +853,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.32465246735834974"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x1 = np.array([1.0, 2.0, 1.0])  \n",
+    "x2 = np.array([0.0, 4.0, -1.0])  \n",
+    "sigma = 2  \n",
+    "gaussian_kernel(x1, x2, sigma)  "
+   ]
   },
   {
    "cell_type": "markdown",
